src/objects/Bank_Account__c.object
<CustomObject>
    <fields>
        <fullName>ATM_Card_No__c</fullName>
        <label>ATM Card No</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Holder_s_Address__c</fullName>
        <label>Account Holder's Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Holder_s_Contact_Number__c</fullName>
        <label>Account Holder's Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Account_Holder_s_Email__c</fullName>
        <label>Account Holder's Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Income__c</fullName>
        <label>Annual Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Number__c</fullName>
        <label>Bank Account Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Of_Birth__c</fullName>
        <label>Date Of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_Balance__c</fullName>
        <label>Initial Balance</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Internet_Banking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Internet Banking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issue_ATM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Issue ATM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Married</fullName>
                </value>
                <value>
                    <fullName>Unmarried</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maximum_Amount_Deposited__c</fullName>
        <label>Maximum Amount Deposited</label>
        <summarizedField>Deposit__c.Deposited_Amount__c</summarizedField>
        <summaryForeignKey>Deposit__c.Bank_Account__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Minimum_Amount_Deposited__c</fullName>
        <label>Minimum Amount Deposited</label>
        <summarizedField>Deposit__c.Deposited_Amount__c</summarizedField>
        <summaryForeignKey>Deposit__c.Bank_Account__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <label>Occupation</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAN_Card_No__c</fullName>
        <label>PAN Card No</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualification__c</fullName>
        <label>Qualification</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residence_No__c</fullName>
        <label>Residence No</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMS_Alert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Deposited__c</fullName>
        <label>Total Amount Deposited</label>
        <summarizedField>Deposit__c.Deposited_Amount__c</summarizedField>
        <summaryForeignKey>Deposit__c.Bank_Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Number_Of_Deposited__c</fullName>
        <label>Total Number Of Deposited</label>
        <summaryForeignKey>Deposit__c.Bank_Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Savings Account</fullName>
                </value>
                <value>
                    <fullName>Current Account</fullName>
                </value>
                <value>
                    <fullName>Recurring Deposit Account</fullName>
                </value>
                <value>
                    <fullName>Fixed Deposit Account</fullName>
                </value>
                <value>
                    <fullName>DEMAT Account</fullName>
                </value>
                <value>
                    <fullName>NRI Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Bank Account</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Holder_s_Email__c</columns>
        <columns>Bank_Account_Number__c</columns>
        <columns>Bank_Name__c</columns>
        <columns>Type__c</columns>
        <columns>Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Account Holder's Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>